# aoc-2024

./: .gitignore  README.md  pyproject.toml  requirements.txt  scaffold.py
2023/: day_01.py  day_01_test.py  day_02.py  day_02_test.py  day_03.py  day_03_test.py
aoc/: day_01.py  day_01_test.py  day_02_test.py  day_03.py  day_03_test.py  day_04_test.py  day_05.py  day_05_test.py  day_06.py  day_06_test.py  day_07.py  day_07_test.py  day_08.py  day_08_test.py  day_10.py  day_10_test.py  day_12.py  day_12_test.py  day_17_test.py  day_19_test.py
aoc/utils/: grid.py  grid_test.py  tools.py
aoc_2023/: day_03.py
aoc_2024/: day_02.py  day_04.py  day_06.py  day_07.py  day_08.py  day_12.py  day_17.py  day_19.py
aoc_utils/: grid.py  tools.py
tests/aoc_2023/: day_01_test.py  day_02_test.py  day_03_test.py
tests/aoc_2024/: day_01_test.py  day_02_test.py  day_03_test.py  day_04_test.py  day_05_test.py  day_06_test.py  day_07_test.py  day_08_test.py  day_10_test.py  day_12_test.py  day_17_test.py  day_19_test.py
tests/aoc_utils/: grid_test.py
