[project]
name = "aoc-2024"
version = "2024.12"
description = "Advent of Code 2024"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aocd>=0.1",
    "numpy>=2.2.4",
    "pytest>=8.3.5",
    "ruff>=0.11.4",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "A", "B"]
